--- a/my-recipe-app/src/App.css
+++ b/my-recipe-app/src/App.css
@@ -1,39 +1,46 @@
 .App {
-    text-align: center;
-    background-color: aliceblue;
-}
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
     min-height: 100vh;
+    text-align: center;
+    background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 100%);
+}
+
+.app-form {
+    min-height: 10vh;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
+    align-items: center;
+    text-transform: capitalize;
+}
+
+.search-bar {
+    width: 30%;
+    border: none;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+.search-button {
+    background: rgb(28, 89, 168);
+    border: none;
+    padding: 10px 20px;
     color: white;
+    border-radius: 3px;
+    cursor: pointer;
+    transition-duration: 0.4s;
 }
 
-.App-link {
-    color: #61dafb;
+.search-button:hover {
+    background-color: palevioletred;
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.recipes {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    line-height: 0.75;
+    text-transform: capitalize;
+}
+
+.h1 {
+    text-shadow: 0px 2px rgb(255, 0, 0);
 }
